[package]
name = "rust_cameroon_wordle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }  # We need this to enable WASM support in rand
yew = { version = "0.21", features = ["csr"] }
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element"] }
gloo = { version = "0.11", default-features = false, features = ["utils", "events", "net"] }
chrono = "0.4"
console_error_panic_hook = "0.1"
